--- a/task8/index.html
+++ b/task8/index.html
@@ -15,6 +15,17 @@
         <div id="btn"></div>
     <br>
     <br>
+    <div>
+
+        <a href="https://www.google.com/" title="">Текст первой ссылки</a>
+    </div>
+    <div>
+        <a href="https://www.apple.com/" title="">Текст второй ссылки</a>
+    </div>
+    <div>
+        <a href="https://www.youtube.com/" title="">Текст третьей ссылки</a>
+    </div>
+
     <div id="invisibleBtn"></div>
     <span id="spantext">Hello typescript is a powerful weapon!</span>
     <br>
@@ -23,9 +34,9 @@
     <br>
     <div id="box">
         <input id="inpCircle" placeholder="px"/>
-        <a id="btnCircle"href="#">
+        <button id="btnCircle"href="#">
             Start
-        </a>
+        </button>
         <br>
         <div id="circle"></div>
     </div>
